--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.boot:spring-boot-starter-data-cassandra')
 	implementation('io.dropwizard.metrics:metrics-core:3.2.6')
+	implementation('org.springframework.boot:spring-boot-starter-aop')
 	compileOnly('org.projectlombok:lombok')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
