--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,10 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven { url "https://repo.spring.io/milestone" }
 }
 
+ext['springCloudVersion'] = 'Greenwich.M3'
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
@@ -30,6 +32,9 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-cassandra')
 	implementation('io.dropwizard.metrics:metrics-core:3.2.6')
 	implementation('org.springframework.boot:spring-boot-starter-aop')
+	implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+	implementation('org.springframework.cloud:spring-cloud-starter-netflix-ribbon')
+
 
 	compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.1.2.RELEASE'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
@@ -43,4 +48,10 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
