--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.jackson.date-format=yyyy-MM-dd
+spring.application.name=indicator
+server.port=8080
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
