--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=indicator
 server.port=8080
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
