--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ ext['springCloudVersion'] = 'Greenwich.M3'
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
 	implementation('org.springframework.boot:spring-boot-starter-data-cassandra')
 	implementation('io.dropwizard.metrics:metrics-core:3.2.6')
 	implementation('org.springframework.boot:spring-boot-starter-aop')
@@ -47,6 +49,8 @@ dependencies {
 
 	compileOnly('org.projectlombok:lombok')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
+	runtimeOnly('com.h2database:h2')
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
