--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
 	implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	implementation('org.springframework.cloud:spring-cloud-starter-netflix-ribbon')
 
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.6.RELEASE'
 
+	
 	compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.1.2.RELEASE'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
 	compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.1.2.RELEASE'
